--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,3 +5,4 @@
   sonar.sourceEncoding-UTF-8
   sonar.host.url=http://54.216.155.5:9000
   sonar.login=sqp_c416d5a34d7c5fb4a3f84b4292302cd69a8ec41e
+  sonar.exclusions=**/node_modules/**
