--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "npm": ">=5",
     "node": ">=8.15.1"
   },
+  "scripts": {
+      …
+      "sonar": "node app.js"
+  },
   "author": "Max Stoiber",
   "license": "MIT",
   "scripts": {
