--- a/package.json
+++ b/package.json
@@ -10,9 +10,6 @@
     "npm": ">=5",
     "node": ">=8.15.1"
   },
-  "scripts": {
-      "sonar": "node app.js"
-  },
   "author": "Max Stoiber",
   "license": "MIT",
   "scripts": {
@@ -41,6 +38,7 @@
     "lint:js": "npm run lint:eslint -- . ",
     "lint:staged": "lint-staged",
     "pretest": "npm run test:clean && npm run lint",
+    "sonar": "node app.js",
     "test:clean": "rimraf ./coverage",
     "test": "cross-env NODE_ENV=test jest --coverage",
     "test:watch": "cross-env NODE_ENV=test jest --watchAll",
