--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
   sonar.projectKey=nodejs
   sonar.projectName=nodejs
   sonar.projectVersion=1.0
-  sonar.sources=./
+  sonar.sources=app
   sonar.sourceEncoding-UTF-8
   sonar.login=sqp_c416d5a34d7c5fb4a3f84b4292302cd69a8ec41e
   sonar.exclusions=**/node_modules/**,app/*.js
