--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,8 @@
-  sonar.projectKey=nodejs
-  sonar.projectName=nodejs
-  sonar.projectVersion=1.0
-  sonar.sources=app
-  sonar.sourceEncoding-UTF-8
-  sonar.login=sqp_c416d5a34d7c5fb4a3f84b4292302cd69a8ec41e
+-Dsonar.projectKey=nodejs
+-Dsonar.projectName=nodejs
+-Dsonar.sources=.
+-Dsonar.projectVersion=1.0
+-Dsonar.sourceEncoding-UTF-8
+-Dsonar.host.url=http://54.216.155.5:9000
+-Dsonar.login=sqp_c416d5a34d7c5fb4a3f84b4292302cd69a8ec41e
  
