--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,16 @@
-# Mandatory Medata required #
- # Dummy checkin #
-  sonar.projectKey=test
-  sonar.projectName=test
-  sonar.projectVersion=1.0
-# path to the src dir of the maven project
-  sonar.sources=src
-  sonar.java.binaries=target\\classes
-  sonar.jacoco.reportPath=target\\coverage-reports\\jacoco-unit.exec
+# must be unique in a given SonarQube instance
+sonar.projectKey=nodejs
+
+# --- optional properties ---
+
+# defaults to project key
+sonar.projectName=nodejs
+# defaults to 'not provided'
+sonar.projectVersion=1.0
+
+# Path is relative to the sonar-project.properties file. Defaults to .
+sonar.sources=.
+
+# Encoding of the source code. Default is default system encoding
+sonar.sourceEncoding=UTF-8
+
