--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,10 +1,10 @@
 # must be unique in a given SonarQube instance
-sonar.projectKey=nodejs
+sonar.projectKey=node.js
 
 # --- optional properties ---
 
 # defaults to project key
-sonar.projectName=nodejs
+sonar.projectName=node.js
 # defaults to 'not provided'
 sonar.projectVersion=1.0
 
