--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,7 +9,11 @@ sonar.projectName=node.js
 sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Defaults to .
-sonar.sources=.
+sonar.sources=./
+sonar.host.url=http://ec2-18-234-84-82.compute-1.amazonaws.com:9000
+#Add the secret token generated in step2 
+sonar.login=sqp_e774e52e1de67515e1e03b80ac155fa3d06b5740 
+
 
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
