--- a/.github/workflows/jenkinsupdate.yml
+++ b/.github/workflows/jenkinsupdate.yml
@@ -7,6 +7,7 @@ jobs:
     runs-on: self-hosted
     steps:
     - name: trigger single Job
+      uses: admin/nodejs@v2
       with:
         url: "http://3.22.98.199:8080/"
         user: "admin"
