--- a/.github/workflows/jenkinsupdate.yml
+++ b/.github/workflows/jenkinsupdate.yml
@@ -12,6 +12,6 @@ jobs:
         url: "http://3.22.98.199:8080/"
         user: "admin"
         token: ${{ secrets.TOKEN }}
-        job: "node"
+        job: "nodejs"
           
           
