--- a/.github/workflows/jenkinsupdate.yml
+++ b/.github/workflows/jenkinsupdate.yml
@@ -11,7 +11,7 @@ jobs:
       with:
         url: "http://3.22.98.199:8080/"
         user: "admin"
-        token: b9c9ae966cc673d3f50f23a8566dded8fcca8ba5bdbd3581338c6f7922d853b5
+        token: ${{ secrets.TOKEN }}
         job: "NodeJs_Project"
           
       
