--- a/.github/workflows/testjenkins.yml
+++ b/.github/workflows/testjenkins.yml
@@ -4,7 +4,7 @@ jobs:
 
   build:
     name: Build
-    runs-on: my-runner
+    runs-on: self-hosted
     steps:
     - name: trigger single Job
       uses: actions/checkout@v3
