--- a/.github/workflows/updateone.yml
+++ b/.github/workflows/updateone.yml
@@ -12,5 +12,5 @@ jobs:
         url: "http://3.22.98.199:8080/"
         user: "admin"
         token: ${{ secrets.TOKEN }}
-        job: "NodeJs_Project"
+        #job: "NodeJs_Project"
           
