--- a/.github/workflows/updateone.yml
+++ b/.github/workflows/updateone.yml
@@ -7,10 +7,10 @@ jobs:
     runs-on: self-hosted
     steps:
     - name: trigger single Job
-      uses: actions/checkout@v3
+      uses: rlabhilash1201@gmail.com/NodeJsBoilerplateCode
       with:
         url: "http://3.22.98.199:8080/"
         user: "admin"
         token: ${{ secrets.TOKEN }}
-        #job: "NodeJs_Project"
+        job: "NodeJs_Project"
           
