--- a/.github/workflows/updateone.yml
+++ b/.github/workflows/updateone.yml
@@ -7,8 +7,10 @@ jobs:
     runs-on: self-hosted
     steps:
     - name: trigger single Job
-      uses: Abhilash-1201/NodeJsBoilerplateCode@v3
+      uses: actions/checkout@v2
       with:
+        repository: Abhilash-1201/NodeJsBoilerplateCode
+        ref: main
         url: "http://3.22.98.199:8080/"
         user: "admin"
         token: ${{ secrets.TOKEN }}
