--- a/.github/workflows/updateone.yml
+++ b/.github/workflows/updateone.yml
@@ -11,8 +11,8 @@ jobs:
       with:
         repository: Abhilash-1201/NodeJsBoilerplateCode
         ref: main
-        url: "http://3.22.98.199:8080/"
-        user: "admin"
+        #url: "http://3.22.98.199:8080/"
+        #user: "admin"
         token: ${{ secrets.TOKEN }}
         job: "NodeJs_Project"
           
