--- a/.github/workflows/updatetwo.yml
+++ b/.github/workflows/updatetwo.yml
@@ -8,10 +8,10 @@ jobs:
     steps:
     - name: Trigger jenkins job
       uses: google-github-actions/setup-gcloud@v0
-      with:
-        url: ${{ secrets.JENKINS_URL }}
-        job_name: "NodeJs_Project"
-        user_name: ${{ secrets.JENKINS_USER }}
-        api_token: ${{ secrets.JENKINS_TOKEN }}
-        wait: "true"
-        timeout: "1000"
+      #with:
+        #url: ${{ secrets.JENKINS_URL }}
+        #job_name: "NodeJs_Project"
+        #user_name: ${{ secrets.JENKINS_USER }}
+        #api_token: ${{ secrets.JENKINS_TOKEN }}
+        #wait: "true"
+        #timeout: "1000"
