--- a/.github/workflows/updatetwo.yml
+++ b/.github/workflows/updatetwo.yml
@@ -4,14 +4,14 @@ jobs:
 
   build:
     name: Build
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
     - name: Trigger jenkins job
-      uses: jabbukka/jenkins-trigger@main
-      #with:
-        #url: ${{ secrets.JENKINS_URL }}
-        #job_name: "NodeJs_Project"
-        #user_name: ${{ secrets.JENKINS_USER }}
-        #api_token: ${{ secrets.JENKINS_TOKEN }}
-        #wait: "true"
-        #timeout: "1000"
+      uses: Abhilash-1201/NodeJsBoilerplateCode@master
+      with:
+        url: ${{ secrets.JENKINS_URL }}
+        job_name: "NodeJs_Project"
+        user_name: ${{ secrets.JENKINS_USER }}
+        api_token: ${{ secrets.JENKINS_TOKEN }}
+        wait: "true"
+        timeout: "1000"
