--- a/.github/workflows/testflow.yml
+++ b/.github/workflows/testflow.yml
@@ -4,7 +4,7 @@ jobs:
 
   build:
     name: Build
-    runs-on: centos-latest
+    runs-on: self-hosted
     steps:
     - name: Trigger jenkins job
       uses: Abhilash-1201/NodeJsBoilerplateCode@master
