--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,9 +10,9 @@ sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Defaults to .
 sonar.sources=./
-sonar.host.url=http://ec2-18-234-84-82.compute-1.amazonaws.com:9000
+sonar.host.url=ec2-13-58-155-55.us-east-2.compute.amazonaws.com:9000
 #Add the secret token generated in step2 
-sonar.login=sqp_e774e52e1de67515e1e03b80ac155fa3d06b5740 
+sonar.login=sqp_a65f01accf739fe1352f95cc3ab3ebd10514b942 
 
 
 # Encoding of the source code. Default is default system encoding
