--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,10 +7,10 @@ jobs:
     runs-on: self-hosted
     steps:
     - name: Trigger jenkins job
-      uses: Abhilash-1201/NodeJsBoilerplateCode@master
+      uses: admin/jenkins-action@master
       with:
         url: ${{ secrets.JENKINS_URL }}
-        job_name: "test"
+        job_name: "jenkins-action"
         user_name: ${{ secrets.JENKINS_USER }}
         api_token: ${{ secrets.JENKINS_TOKEN }}
         wait: "true"
