--- a/action.yml
+++ b/action.yml
@@ -21,8 +21,8 @@ outputs:
   jenkins_job_url:
     description: 'URL to the job details'
 runs:
-  using: 'docker'
-  image: 'Dockerfile'
+  using: 'jenkins'
+  image: 'Jenkinsfile'
 
 branding:
   icon: 'check-circle'
