--- a/action.yml
+++ b/action.yml
@@ -20,7 +20,9 @@ inputs:
 outputs:
   jenkins_job_url:
     description: 'URL to the job details'
-
+runs:
+   using: 'jenkins'
+   image: 'Jenkinsfile
 branding:
   icon: 'check-circle'
   color: 'green'
