--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,12 +8,10 @@ jobs:
     runs-on: self-hosted
     steps:
     - name: Trigger jenkins job
-      uses: Abhilash-1201/NodeJsBoilerplateCode@master
+      uses: estherk0/jenkins-trigger@main
       with:
-        command: run
-        jenkinsfile: Jenkinsfile
         url: ${{ secrets.JENKINS_URL }}
-        job_name: "jenkins-action-two"
+        job_name: "jenkins-action-2"
         user_name: ${{ secrets.JENKINS_USER }}
         api_token: ${{ secrets.JENKINS_TOKEN }}
         wait: "true"
