--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,3 +18,15 @@ jobs:
           poll-time: 10 # how often to poll the jenkins server for results
           timeout-value: 600 # How long to poll before timing out the action
           verbose: true # true/false - turns on extra logging
+          
+      - name: Use git-auto-commit-action
+        id: "auto-commit-action"
+        uses: ./
+
+      - name: "no changes detected"
+        if: steps.auto-commit-action.outputs.changes_detected == false
+        run: "echo \"No changes detected\""
+
+      - name: "changes detected"
+        if: steps.auto-commit-action.outputs.changes_detected == true
+        run: "echo \"Changes detected\""
