--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,18 +1,18 @@
 # must be unique in a given SonarQube instance
-sonar.projectKey=node.js
+sonar.projectKey=nodejs_project
 
 # --- optional properties ---
 
 # defaults to project key
-sonar.projectName=node.js
+sonar.projectName=nodejs_project
 # defaults to 'not provided'
 sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Defaults to .
 sonar.sources=./
-sonar.host.url=ec2-13-58-155-55.us-east-2.compute.amazonaws.com:9000
+sonar.host.url=http://18.191.133.74:9000
 #Add the secret token generated in step2
-sonar.login=sqp_a65f01accf739fe1352f95cc3ab3ebd10514b942
+sonar.login=sqp_e20c5be85d97e220502a925d99a73af3783f7bd2
 
 
 # Encoding of the source code. Default is default system encoding
